fix bugs with img sizes and overflow at features

--- a/src/scss/sections&blocks/features.scss
+++ b/src/scss/sections&blocks/features.scss
@@ -1,4 +1,7 @@
 .features {
+    max-width: 100vw;
+    min-width: 300px;
+    overflow-x: hidden;
     background-color: #F4F4F4;
     padding-top: 94px;
     padding-bottom: 23px;
@@ -7,8 +10,7 @@
     grid-template-columns: minmax(406px, 40%) 53%;
     column-gap: 43px;
     justify-content: end;
-    min-width: 100%;
-    @media (min-width:1400px) {
+    @media (min-width:1600px) {
         grid-template-columns: 1fr 1fr;
         justify-content: center;
         .features-sidebar {
@@ -51,10 +53,9 @@
 }
 
 .features-sidebar {
-    justify-self: start;
-    @media (min-width:1372px) {
-        justify-self: end;    
-    }
+    max-width: 100%;
+    overflow-x: hidden;
+    justify-self: end;
     &__title {
         @include sections-title;
         font-size: calc( (100vw - 1220px)/(1380 - 1220) * (48 - 42) + 42px);
@@ -143,7 +144,7 @@
     }
     .features-sidebar {
         &__title {
-            width: 74%;
+            width: 82%;
             top: 1.4%;
             left: 50%;
             transform:translate(-50%, 0);
